2001-09-12  Don Porter <msofer@users.sourceforge.net>

        * tests/rename.test:
        * tests/split.test:  Corrected tests to better isolate tests in
        one file from influencing tests in other files.  [Bug 460591]

	* unix/tclLoadShl.c:  Added #include of tclInt.h; access to Tcl
        internals, notably TclpUnloadFile(), is required.  Thanks to
        Bob Techentin for report and patch.  [Bug 459305]

	* generic/tclInitScript.h (initScript):
        * win/tclWinInit.c (TCL_REGISTRY_KEY, TclpSetVariables):  Removed
        vestiges of Tcl's old initialization from registry variables.
        [Bug 455645]

	* tests/unixInit.test (unixInit-3.2): Updated test to support
        newer HP-UX releases that properly report euc-jp as the system
        encoding for Japanese.  Bug report and patch verification by Bob
        Techentin.  [Bug 453883]

	* compat/strtod.c (strtod):  Fixed failure to handle expressions
        like 3eq2 and failure to set errno on overflow.  [Bug 440894]

2001-09-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclEvent.c (TclInExit): Corrected handling of tsd in
	late stages of finalization.  [Bug #419449] (darley)

	* tests/stack.test:
	* generic/tclInterp.c (AliasObjCmd): Check the numLevels to ensure
	that we aren't hitting some alias loop condition.  [Bug #443184]

2001-09-10  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* generic/tclInt.decls: Added 'TclWinFlushDirtyChannels' to
	  the internal platform specific stub table.

2001-09-06  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* All the changes below serve to fix bug [219148] which reports a
	  80x performance hit for file I/O on Win* systems. On my system
	  it was closer to a 120x hit. Problem report by Uwe Traum <no
	  email address available>.

	  The fix goes like this: The obstacle is 'FlushFileBuffers',
	  executed whenever Tcl writes data to the OS, as Tcl has to wait
	  for the disk to complete I/O, and disks are slow. We remove that